tests/bad/bad026.lat
// Assigning string to int variable.

int main () {
 int x;
  x = "foo"+"bar";
 return 0 ;
}